2022-08-15  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.4.9-snapshot2

2022-08-15  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-view.el (howm-sort-items): fix broken macro (worked accidentally)

2022-08-15  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-view.el (howm-view-toggle-uniq): "uniq" is now togglable
	thx > Andrei Sukhovskii san (qejep at posteo.net)

2022-08-15  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-view.el (howm-view-filter-methods): revive "uniq" after "f" (filter)
	thx > Andrei Sukhovskii san (qejep at posteo.net)

2021-12-30  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.4.9-snapshot1

2021-12-30  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.4.8

	* howm.el.in: update copyright years

2021-12-28  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.4.8-snapshot3

2021-04-29  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-mode.el (howm-mode): update define-minor-mode for emacs 28.1
	thx > U5948U5e7eU4e43
	https://twitter.com/U5948U5e7eU4e43/status/1387373441582387209
	http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=2fb271ca35ff96540c0940b0ea5281bdaac953ec

	* action-lock.el (action-lock-mode): ditto.

	* illusion.el (illusion-mode): ditto.

2021-04-28  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-view.el (howm-view-summary-mode): add TAB and M-TAB to docstring

2021-02-17  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.4.8-snapshot2

	* cheat-font-lock.el (cheat-font-lock-mode, cheat-font-lock-fontify):
	fix incomplete font-lock after save

2020-12-31  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.4.8-snapshot1

2020-12-31  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.4.7

	* howm.el.in: update copyright years

2020-12-29  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-mode.el (howm-template-title):
	delete obsolete comment

	* cheat-font-lock.el (cheat-font-lock-fontify):